# motion-extraction

./: README.md  pyproject.toml
src/motion_extraction/: main.py
